# dorodoro-bangumi

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
benches/: Cargo.toml  channel_transfer_benchmark.rs  dispatch_benchmark.rs  socket_buffer_benchmark.rs  write_log_benchmark.rs
doro/: Cargo.toml
doro-macro/: Cargo.toml
doro-macro/src/: lib.rs  router_macro.rs
doro-test/: Cargo.toml
doro-test/src/: client_auth.rs  client_base.rs  client_util.rs  lib.rs
doro-test/tests/: api_bangumi.rs  api_rss.rs  api_system.rs  api_task.rs  api_test.rs  bbr.rs  framework.rs
doro-util/: Cargo.toml
doro-util/src/: bendy_ext.rs  buffer.rs  bytes_util.rs  collection.rs  fs.rs  global.rs  hash.rs  lib.rs  log.rs  net.rs  number.rs  option_ext.rs  rand.rs  shortcut.rs  sync.rs  test_global_register.rs  timer.rs  win_minmax.rs  xml.rs
doro-util/src/buffer/: tests.rs
doro-util/src/log/: tests.rs
doro-util/src/timer/: tests.rs
doro/src/: api.rs  bt.rs  client.rs  core.rs  crawler.rs  lib.rs  main.rs  mapper.rs  middleware.rs  service.rs
doro/src/api/: bangumi_api.rs  rss_api.rs  system_api.rs  task_api.rs
doro/src/bt/: base_peer.rs  default_servant.rs  dht.rs  pe_crypto.rs  peer.rs  servant.rs  socket.rs  store.rs  torrent.rs  tracker.rs
doro/src/bt/base_peer/: command.rs  error.rs  listener.rs  peer_resp.rs  rate_control.rs  reserved.rs
doro/src/bt/base_peer/rate_control/: bbr.rs  probe.rs
doro/src/bt/base_peer/rate_control/bbr/: tests.rs
doro/src/bt/default_servant/: coordinator.rs  extend_data.rs
doro/src/bt/dht/: command.rs  entity.rs  routing.rs  tests.rs
doro/src/bt/dht/routing/: tests.rs
doro/src/bt/pe_crypto/: tests.rs
doro/src/bt/peer/: command.rs  listener.rs  peer_resp.rs
doro/src/bt/peer/rate_control/: bbr.rs  probe.rs
doro/src/bt/peer/rate_control/bbr/: tests.rs
doro/src/bt/store/: tests.rs
doro/src/bt/torrent/: tests.rs
doro/src/bt/tracker/: command.rs  http_tracker.rs  udp_tracker.rs
doro/src/bt/tracker/http_tracker/: tests.rs
doro/src/bt/tracker/udp_tracker/: socket.rs  tests.rs
doro/src/client/: api.rs  controller.rs
doro/src/client/api/: task_api.rs
doro/src/core/: bootstrap.rs  command.rs  config.rs  context.rs  control.rs  db.rs  emitter.rs  peer_manager.rs  router.rs  rss.rs  runtime.rs  task.rs  task_handler.rs  task_manager.rs  tcp_server.rs  udp_server.rs
doro/src/core/control/: command.rs  request_parse.rs
doro/src/core/db/: tests.rs
doro/src/core/emitter/: constant.rs  test.rs  transfer.rs
doro/src/core/peer_manager/: command.rs  gasket.rs
doro/src/core/peer_manager/gasket/: command.rs  coordinator.rs
doro/src/core/protocol/: bit_torrent.rs  remote_control.rs
doro/src/core/router/: ret.rs  tests.rs
doro/src/core/rss/: command.rs
doro/src/core/scheduler/: command.rs
doro/src/core/task/: content.rs  magnet.rs
doro/src/core/task/content/: coordinator.rs  event.rs
doro/src/core/task/magnet/: event.rs
doro/src/core/task_handler/: gasket.rs
doro/src/core/task_handler/gasket/: command.rs  coordinator.rs  error.rs
doro/src/core/tcp_server/: command.rs  future.rs
doro/src/crawler/: entity.rs
doro/src/mapper/: context.rs  dht.rs  rss.rs  torrent.rs
doro/src/middleware/: mikan_crawler.rs
doro/src/middleware/mikan_crawler/: tests.rs
doro/src/service/: bangumi_service.rs  rss_service.rs  system_service.rs  task_service.rs
doro/tests/: bencode.rs  chore.rs  db.rs  dht.rs  framework.rs  func.rs  rc4.rs  rss.rs  torrent.rs  udp_socket.rs
doro/tests/resources/: test4.torrent  test5.torrent
doro_macro/: Cargo.toml
doro_macro/src/: lib.rs  router_macro.rs
lib/: README.md
lib/bendy/: Cargo.toml
lib/bendy/src/: lib.rs
src/: bt.rs  core.rs  lib.rs  main.rs  mapper.rs  test_global_register.rs  util.rs
src/bt/: bencoding.rs  constant.rs  dht.rs  parse.rs  pe_crypto.rs  peer.rs  scheduler.rs  socket.rs  store.rs  torrent.rs  tracker.rs
src/bt/bencoding/: error.rs  tests.rs
src/bt/dht/: command.rs  entity.rs  error.rs  node_id.rs  routing.rs  tests.rs
src/bt/pe_crypto/: tests.rs
src/bt/peer/: command.rs  error.rs  future.rs  listener.rs  peer_resp.rs  rate_control.rs  reserved.rs
src/bt/store/: error.rs  tests.rs
src/bt/torrent/: error.rs  tests.rs
src/bt/tracker/: command.rs  error.rs  http_tracker.rs  udp_tracker.rs
src/client/: common.rs
src/client/controller/: task.rs
src/core/: alias.rs  bootstrap.rs  command.rs  config.rs  context.rs  control.rs  controller.rs  db.rs  emitter.rs  peer_manager.rs  protocol.rs  router.rs  rss.rs  runtime.rs  scheduler.rs  tcp_server.rs  udp_server.rs
src/core/command/: peer.rs  peer_manager.rs  scheduler.rs  tcp_server.rs
src/core/context/: error.rs
src/core/control/: command.rs  request_parse.rs
src/core/db/: error.rs  tests.rs
src/core/emitter/: constant.rs  error.rs  test.rs  (+1 more)
src/mapper/: context.rs  dht.rs  error.rs  torrent.rs
src/util/: bendy_ext.rs  buffer.rs  bytes.rs  bytes_util.rs  collection.rs  datetime.rs  fs.rs  log.rs  net.rs  rand.rs  shortcut.rs  sync.rs  timer.rs  win_minmax.rs
tests/: chore.rs  client.rs  client_base.rs  db.rs  dht.rs  enum_dispatch.rs  framework.rs  rc4.rs  rss.rs  torrent.rs  torrent_parse.rs  udp_socket.rs
tests/resources/: announce  test1.torrent  test3.torrent  test6.torrent  test7.torrent  test_buf_writer.txt
(+31 files in other folders)
